# gardenctl

./: .gitignore  .travis.yml  .uncrustify.cfg  Makefile.am  README  README.md  autogen.sh  build-uncrustify.sh  configure.ac  uncrustify.sh
common/: Makefile.am  common.c
common/gpioex/: gpioex.c
common/include/: garden_common.h  gpioex.h  logging.h
common/logging/: logging.c
gardenctl/: Makefile.am  arguments.h  dl_module.c  dl_module.h  gardenctl.c  mqtt.c  mqtt.h
include/: garden_module.h
m4/: gardenctl.m4
modules/: Makefile.am
modules/light/: Makefile.am  light.c
modules/watering/: Makefile.am  watering.c
modules/weather_station/: Makefile.am  weather_station.c
systemd/: gardenctl.service.in
test/: Makefile.am  check_garden_common.c  check_gardenctl.c  check_gardenctl_dl_module.c  mock_dl.c  mock_dl.h  mock_i2c.c  mock_i2c.h  mock_malloc.c  mock_malloc.h
